2004-11-30  Mark Grondona <mgrondona@llnl.gov>

	* compat/Hostlist.pm (expand) : Don't attempt to expand regular
	  hostnames that happen to have the `-' character.

2004-11-16  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Remove copyright, add license.
	
2004-11-12  Albert Chu  <chu11@llnl.gov>

	* README: Cleaned up.

	* gendersllnl.spec.in: Updated description.
	
2004-10-28  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Fixed additional port issues.

	* configure.ac: Require genders to be installed or disallow
	compilation.
	
2004-10-26  Albert Chu  <chu11@llnl.gov>

	* config/Make-rpm.mk: updated script for porting issues.

	* gendersllnl.spec.in: Fix for port issues.

	* Makefile.am, dist/Makefile.am: distcheck fixes.
	
2004-06-21  Albert Chu  <chu11@llnl.gov>

	* src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am,
	compat/Makefile.am: Fixes to make distcheck work.
	
2004-06-08  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am, compat/Makefile.am: Minor fixes for
	distcheck.
	
2004-05-19  Albert Chu  <chu11@llnl.gov>

	* Makefile.am compat/Makefile.am, man/Makefile.am,
	man/dist/Makefile.am, dist/Makefile.am,
	src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am: Fixed dist issues.
	
	* src/libgendersllnl/Makefile.am: Cleanup.
	
	* src/libgendersllnl/gendersllnl.c (genders_get_cluster): Fix
	compiler warning.
	
2004-04-30  Albert Chu  <chu11@llnl.gov>

	* dist/dist_all: Fix bug in which -v option should be used with
	pdsh.

	* Tagged gendersllnl-1-4-1

2004-04-27  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Use %configure macro.

	* Localize all non-genderllnl library symbols.
	
2004-03-10  Albert Chu  <chu11@llnl.gov>

	* dist/dist2 (find_attrs_in_file, cat_file, getnodes,
	post_process_attrs): Added support for attributes and values with
	hyphens ('-') or periods ('.').
	